force-app/main/default/objects/Facebook_Credentials__c/Facebook_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Facebook Credentials</label>
</CustomObject>