force-app/main/default/objects/Facebook_Credentials__c/fields/App_ID_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>App_ID_Client_Id__c</fullName>
    <label>App ID/Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>