force-app/main/default/objects/Facebook_Credentials__c/fields/App_Secret_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>App_Secret_Client_Secret__c</fullName>
    <label>App Secret/Client_Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>