force-app/main/default/objects/Facebook_Credentials__c/fields/Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Id__c</fullName>
    <label>Facebook_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>